--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.2",
+    "chartjs-plugin-autocolors": "^0.2.2",
     "countup": "^1.8.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
