--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.25.0",
+    "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "chartjs-plugin-autocolors": "^0.2.2",
     "countup": "^1.8.2",
+    "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
