--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@hookform/resolvers": "^3.3.4",
+    "@mantine/core": "^7.7.0",
+    "@mantine/hooks": "^7.7.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.25.0",
     "axios": "^1.6.7",
@@ -18,13 +21,16 @@
     "chartjs-plugin-autocolors": "^0.2.2",
     "countup": "^1.8.2",
     "firebase": "^10.8.1",
+    "framer-motion": "^11.0.20",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
@@ -35,6 +41,9 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
